[refactor] Relicence only the code that is the Intellectual Property of Evolved Binary and Adam Retter under the BSL 1.1 license