@@ -1,25 +1,26 @@
 /*
- * eXist-db Open Source Native XML Database
- * Copyright (C) 2001 The eXist-db Authors
+ * Elemental
+ * Copyright (C) 2024, Evolved Binary Ltd
  *
- * info@exist-db.org
- * http://www.exist-db.org
+ * admin@evolvedbinary.com
+ * https://www.evolvedbinary.com | https://www.elemental.xyz
  *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
+ * Use of this software is governed by the Business Source License 1.1
+ * included in the LICENSE file and at www.mariadb.com/bsl11.
  *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
+ * Change Date: 2028-04-27
  *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+ * On the date above, in accordance with the Business Source License, use
+ * of this software will be governed by the Apache License, Version 2.0.
+ *
+ * Additional Use Grant: Production use of the Licensed Work for a permitted
+ * purpose. A Permitted Purpose is any purpose other than a Competing Use.
+ * A Competing Use means making the Software available to others in a commercial
+ * product or service that: substitutes for the Software; substitutes for any
+ * other product or service we offer using the Software that exists as of the
+ * date we make the Software available; or offers the same or substantially
+ * similar functionality as the Software.
  */
-
 package org.exist.webdav;
 
 import com.bradmcevoy.http.exceptions.BadRequestException;
@@ -93,8 +94,9 @@ public class SerializationTest {
             assertNotNull(folder);
 
             // store document
+            final byte data[] = XML_WITH_DOCTYPE.getBytes(UTF_8);
             final java.io.File tmpStoreFile = TEMP_FOLDER.newFile();
-            Files.writeString(tmpStoreFile.toPath(), XML_WITH_DOCTYPE);
+            Files.write(tmpStoreFile.toPath(), data);
             assertNotNull(folder.uploadFile(docName, tmpStoreFile, null));
 
             // retrieve document
@@ -104,7 +106,7 @@ public class SerializationTest {
             assertEquals("application/xml", ((File) resource).contentType);
             final java.io.File tempRetrieveFile = TEMP_FOLDER.newFile();
             resource.downloadTo(tempRetrieveFile, null);
-            assertEquals(XML_WITH_DOCTYPE, Files.readString(tempRetrieveFile.toPath()));
+            assertEquals(XML_WITH_DOCTYPE, new String(Files.readAllBytes(tempRetrieveFile.toPath()), UTF_8));
         }
     }
 
@@ -126,8 +128,9 @@ public class SerializationTest {
             assertNotNull(folder);
 
             // store document
+            final byte data[] = XML_WITH_XMLDECL.getBytes(UTF_8);
             final java.io.File tmpStoreFile = TEMP_FOLDER.newFile();
-            Files.writeString(tmpStoreFile.toPath(), XML_WITH_XMLDECL);
+            Files.write(tmpStoreFile.toPath(), data);
             assertNotNull(folder.uploadFile(docName, tmpStoreFile, null));
 
             // retrieve document
@@ -137,7 +140,7 @@ public class SerializationTest {
             assertEquals("application/xml", ((File) resource).contentType);
             final java.io.File tempRetrieveFile = TEMP_FOLDER.newFile();
             resource.downloadTo(tempRetrieveFile, null);
-            assertEquals(XML_WITH_XMLDECL, Files.readString(tempRetrieveFile.toPath()));
+            assertEquals(XML_WITH_XMLDECL, new String(Files.readAllBytes(tempRetrieveFile.toPath()), UTF_8));
         }
     }
 }
